--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-click==7.0
-alembic==1.3.1
-pendulum==2.0.5
-sqlalchemy==1.3.11
+click>=7.0
+alembic>=1.3.1
+pendulum>=2.0.5
+sqlalchemy>=1.3.11
+cement>=3.0.4
+colorlog>=4.0.2
+jinja2>=2.10.1
+pyyaml>=3.13
+
