--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+psycopg2>=2.8.5
 click>=7.0
 alembic>=1.3.1
 pendulum>=2.0.5
@@ -6,6 +7,6 @@ cement>=3.0.4
 colorlog>=4.1.0
 jinja2>=2.10.1
 pyyaml>=3.13
-redis>=3.2.1
+redis>=3.5.0
 kombu>=4.6.3
 tabulate>=0.8.7
