--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,9 @@
 -r requirements.txt
 
-pytest
-pytest-cov
-coverage
+pytest>=5.4.1
+pytest-cov>=2.8.1
+coverage>=5.1
 factory-boy>=2.12.0
-twine>=1.11.0
-setuptools>=38.6.0
-wheel>=0.31.0
+twine>=3.1.1
+setuptools>=46.1.3
+wheel>=0.34.2
